--- a/content/style.css
+++ b/content/style.css
@@ -178,3 +178,30 @@ body,
   flex: 0 0 auto;
   white-space: nowrap;
 }
+
+.color-scale {
+  width: 100%;
+  display: flex;
+}
+
+.color-scale span {
+  flex: 1 1 0;
+  margin: 0;
+  border: 0;
+  font-size: x-small;
+  display: inline-block;
+  padding: 2px 0;
+  color: #FFF;
+  text-align: center;
+  text-shadow:
+    0 1px 1px rgba(0, 0, 0, 0.7),
+    0 0 2px rgba(0, 0, 0, 0.5);
+}
+
+.text-sm {
+  font-size: small;
+}
+
+.text-xs {
+  font-size: x-small;
+}
